--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,6 +2,7 @@
   text-align: center;
   font-size: 2.5rem;
   font-weight: 900;
+  margin-bottom: 2rem;
   
   @media only screen and (min-width: 768px){
     font-size: 3rem;
