--- a/src/components/ui/Layout.module.scss
+++ b/src/components/ui/Layout.module.scss
@@ -1,8 +1,21 @@
 .container {
-  padding: 3rem 2rem;
+  padding: 3rem 3rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  &__card {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+
+    @media only screen and (min-width: 768px){
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media only screen and (min-width: 1120px){
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
 }
 
