--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,10 +1,14 @@
 .card {
-  width: 25rem;
+  width: 26rem;
   border-radius: 5px;
   overflow: hidden;
 
   @media only screen and (min-width: 425px){
     width: 35rem;
+  }
+
+  @media only screen and (min-width: 1440px){
+    width: 40rem;
   }
 
   &__text {
@@ -20,9 +24,10 @@
 .image {
   overflow: hidden;
   width: 100%;
-  height: 190px;
+  aspect-ratio: 3/2;
   object-fit: cover;
   object-position: center;
+
 }
 
 .header {
@@ -30,29 +35,40 @@
 
   &__primary {
     line-height: 1;
-    font-size: 1.7rem;
+    font-size: 2rem;
+    font-weight: 900;
   }
 
   &__secondary {
     color: grey;
-    font-weight: 900;
+    font-weight: 700;
+    font-size: 1.2rem;
+
   }
 }
 
 .rating {
   display: flex;
   align-items: center;
+  margin-bottom: 0.5rem;
+
+  & span {
+    margin-right: 2px
+  }
 
   &__value {
+    padding-top: 4px;
+    font-size: 1.4rem;
     font-weight: 900;
     margin-left: 0.5rem;
-    padding-top: 2px;
+
   }
 }
 
 .price {
   display: flex;
-  font-weight: 900;
+  font-size: 1.3rem;
+  font-weight: 700;
 
   &__new {
     margin-right: 0.5rem;
